--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -61,7 +61,7 @@ button {
 
 p {
     font-family: $font-secondary;
-    font-size: 16px;
+    font-size: 1.4rem;
     font-weight: 450;
     line-height: 150%;
 }
